# bayesiandoe

./: .gitignore  pyproject.toml  remove-comments.py  requirements.txt  setup.py  test.bdoe
bayesiandoe/: __init__.py  __main__.py  core.py  main.py  main_window.py  parameters.py  registry.py  visualizations.py
bayesiandoe/scripts/: run_tests.py
bayesiandoe/tests/: __init__.py  test_core.py  test_core_functionality.py  test_data_processing.py  test_ui_components.py
bayesiandoe/ui/: __init__.py  canvas.py  design_selector.py  dialogs.py  main_window.py  tab_setup.py  ui_actions.py  ui_callbacks.py  ui_utils.py  ui_visualization.py  widgets.py
